bison_flex/skenz/parser.output
Terminals unused in grammar

    S


Grammar

    0 $accept: file $end

    1 file: writer_section FILE_SEPARATOR user_section

    2 writer_section: writer_section writer
    3               | writer

    4 writer: ID ARROW book_list SC

    5 book_list: book_list COMMA book
    6          | book

    7 book: ISBN COLON ID COLON INTEGER COLON collocation

    8 collocation: ε
    9            | lit_gen INTEGER LETTER
   10            | lit_gen INTEGER

   11 lit_gen: LI AV
   12        | LI SO
   13        | LS AV
   14        | LS SO
   15        | LS BO

   16 user_section: user_section user
   17             | user

   18 user: ID COLON loan_list SC

   19 loan_list: loan_list COMMA loan
   20          | loan

   21 loan: DATE ISBN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FILE_SEPARATOR (258) 1
    COMMA (259) 5 19
    ID (260) 4 7 18
    S (261)
    COLON (262) 7 18
    ARROW (263) 4
    INTEGER (264) 7 9 10
    LETTER (265) 9
    ISBN (266) 7 21
    LI (267) 11 12
    LS (268) 13 14 15
    BO (269) 15
    AV (270) 11 13
    SO (271) 12 14
    DATE (272) 21
    SC (273) 4 18


Nonterminals, with rules where they appear

    $accept (19)
        on left: 0
    file (20)
        on left: 1
        on right: 0
    writer_section (21)
        on left: 2 3
        on right: 1 2
    writer (22)
        on left: 4
        on right: 2 3
    book_list (23)
        on left: 5 6
        on right: 4 5
    book (24)
        on left: 7
        on right: 5 6
    collocation (25)
        on left: 8 9 10
        on right: 7
    lit_gen (26)
        on left: 11 12 13 14 15
        on right: 9 10
    user_section (27)
        on left: 16 17
        on right: 1 16
    user (28)
        on left: 18
        on right: 16 17
    loan_list (29)
        on left: 19 20
        on right: 18 19
    loan (30)
        on left: 21
        on right: 19 20


State 0

    0 $accept: • file $end

    ID  shift, and go to state 1

    file            go to state 2
    writer_section  go to state 3
    writer          go to state 4


State 1

    4 writer: ID • ARROW book_list SC

    ARROW  shift, and go to state 5


State 2

    0 $accept: file • $end

    $end  shift, and go to state 6


State 3

    1 file: writer_section • FILE_SEPARATOR user_section
    2 writer_section: writer_section • writer

    FILE_SEPARATOR  shift, and go to state 7
    ID              shift, and go to state 1

    writer  go to state 8


State 4

    3 writer_section: writer •

    $default  reduce using rule 3 (writer_section)


State 5

    4 writer: ID ARROW • book_list SC

    ISBN  shift, and go to state 9

    book_list  go to state 10
    book       go to state 11


State 6

    0 $accept: file $end •

    $default  accept


State 7

    1 file: writer_section FILE_SEPARATOR • user_section

    ID  shift, and go to state 12

    user_section  go to state 13
    user          go to state 14


State 8

    2 writer_section: writer_section writer •

    $default  reduce using rule 2 (writer_section)


State 9

    7 book: ISBN • COLON ID COLON INTEGER COLON collocation

    COLON  shift, and go to state 15


State 10

    4 writer: ID ARROW book_list • SC
    5 book_list: book_list • COMMA book

    COMMA  shift, and go to state 16
    SC     shift, and go to state 17


State 11

    6 book_list: book •

    $default  reduce using rule 6 (book_list)


State 12

   18 user: ID • COLON loan_list SC

    COLON  shift, and go to state 18


State 13

    1 file: writer_section FILE_SEPARATOR user_section •
   16 user_section: user_section • user

    ID  shift, and go to state 12

    $default  reduce using rule 1 (file)

    user  go to state 19


State 14

   17 user_section: user •

    $default  reduce using rule 17 (user_section)


State 15

    7 book: ISBN COLON • ID COLON INTEGER COLON collocation

    ID  shift, and go to state 20


State 16

    5 book_list: book_list COMMA • book

    ISBN  shift, and go to state 9

    book  go to state 21


State 17

    4 writer: ID ARROW book_list SC •

    $default  reduce using rule 4 (writer)


State 18

   18 user: ID COLON • loan_list SC

    DATE  shift, and go to state 22

    loan_list  go to state 23
    loan       go to state 24


State 19

   16 user_section: user_section user •

    $default  reduce using rule 16 (user_section)


State 20

    7 book: ISBN COLON ID • COLON INTEGER COLON collocation

    COLON  shift, and go to state 25


State 21

    5 book_list: book_list COMMA book •

    $default  reduce using rule 5 (book_list)


State 22

   21 loan: DATE • ISBN

    ISBN  shift, and go to state 26


State 23

   18 user: ID COLON loan_list • SC
   19 loan_list: loan_list • COMMA loan

    COMMA  shift, and go to state 27
    SC     shift, and go to state 28


State 24

   20 loan_list: loan •

    $default  reduce using rule 20 (loan_list)


State 25

    7 book: ISBN COLON ID COLON • INTEGER COLON collocation

    INTEGER  shift, and go to state 29


State 26

   21 loan: DATE ISBN •

    $default  reduce using rule 21 (loan)


State 27

   19 loan_list: loan_list COMMA • loan

    DATE  shift, and go to state 22

    loan  go to state 30


State 28

   18 user: ID COLON loan_list SC •

    $default  reduce using rule 18 (user)


State 29

    7 book: ISBN COLON ID COLON INTEGER • COLON collocation

    COLON  shift, and go to state 31


State 30

   19 loan_list: loan_list COMMA loan •

    $default  reduce using rule 19 (loan_list)


State 31

    7 book: ISBN COLON ID COLON INTEGER COLON • collocation

    LI  shift, and go to state 32
    LS  shift, and go to state 33

    $default  reduce using rule 8 (collocation)

    collocation  go to state 34
    lit_gen      go to state 35


State 32

   11 lit_gen: LI • AV
   12        | LI • SO

    AV  shift, and go to state 36
    SO  shift, and go to state 37


State 33

   13 lit_gen: LS • AV
   14        | LS • SO
   15        | LS • BO

    BO  shift, and go to state 38
    AV  shift, and go to state 39
    SO  shift, and go to state 40


State 34

    7 book: ISBN COLON ID COLON INTEGER COLON collocation •

    $default  reduce using rule 7 (book)


State 35

    9 collocation: lit_gen • INTEGER LETTER
   10            | lit_gen • INTEGER

    INTEGER  shift, and go to state 41


State 36

   11 lit_gen: LI AV •

    $default  reduce using rule 11 (lit_gen)


State 37

   12 lit_gen: LI SO •

    $default  reduce using rule 12 (lit_gen)


State 38

   15 lit_gen: LS BO •

    $default  reduce using rule 15 (lit_gen)


State 39

   13 lit_gen: LS AV •

    $default  reduce using rule 13 (lit_gen)


State 40

   14 lit_gen: LS SO •

    $default  reduce using rule 14 (lit_gen)


State 41

    9 collocation: lit_gen INTEGER • LETTER
   10            | lit_gen INTEGER •

    LETTER  shift, and go to state 42

    $default  reduce using rule 10 (collocation)


State 42

    9 collocation: lit_gen INTEGER LETTER •

    $default  reduce using rule 9 (collocation)
